--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,5 +1,8 @@
-* {
+#background {
   background-color: black;
-  margin: 10px;
+  padding: 10px;
   color: white;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
