--- a/src/style/board.scss
+++ b/src/style/board.scss
@@ -13,7 +13,7 @@
     "field library";
 }
 
-.battlefield {
+#battlefield {
   grid-area: field;
 }
 
@@ -42,4 +42,11 @@
   list-style: none;
   border: 2px solid gold;
   padding-left: 0;
+  position: relative;
+  top: 80vh;
+  height: 19vh;
+}
+
+.hand-card {
+  align-self: flex-end;
 }
