--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -6,3 +6,27 @@
   display: flex;
   justify-content: center;
 }
+
+#modal {
+  position: fixed;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.85)
+}
+
+#modal-image {
+  align-self: center;
+  // border: 2px solid white;
+  box-shadow: 0px 0px 20px 5px white;
+}
+
+#modal-image:focus {
+  background-color: none;
+}
+
+.rotated {
+  transform: rotate(90deg)
+}
