--- a/src/style/board.scss
+++ b/src/style/board.scss
@@ -1,16 +1,32 @@
 .board {
   border: 2px solid white;
   display: grid;
-  position: absolute;
+  position: relative;
   top: 50%;
   height: 45%;
   width: 80vw;
   grid-column-gap: 3px;
   grid-row-gap: 3px;
   grid-template-columns: auto 20%;
+  grid-template-rows: 1fr 1fr;
   grid-template-areas:
     "field graveyard"
     "field library";
+}
+
+#sidebar {
+  // border: 2px solid chartreuse;
+  position: relative;
+  height: 45%;
+  top: 50%;
+  margin-right: 10px;
+  width: 5vw;
+  max-width: 5vw;
+  ul {
+    list-style: none;
+    padding: 2px;
+    margin: 0px;
+  }
 }
 
 #battlefield {
@@ -34,6 +50,8 @@
 .library {
   grid-area: library;
   border: 2px solid aquamarine;
+  display: flex;
+  justify-content: center;
 }
 
 #hand {
@@ -42,7 +60,7 @@
   list-style: none;
   border: 2px solid gold;
   padding-left: 0;
-  position: relative;
+  position: absolute;
   top: 80vh;
   height: 19vh;
 }
@@ -53,4 +71,18 @@
 
 .graveyard {
   grid-area: graveyard;
+}
+
+.sidebar-list-item {
+  font-size: 12px;
+  width: 100%;
+  height: 4.5vh;
+  margin: 2px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  text-align: center;
+  h1 {
+    font-size: 18px;
+    margin: 3px;
+  }
 }
