moved modal out of nested dom, added tap functionality

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -14,7 +14,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.85)
+  // background-color: rgba(0, 0, 0, 0.85)
 }
 
 #modal-image {
