display graveyard cards

--- a/src/style/board.scss
+++ b/src/style/board.scss
@@ -71,6 +71,13 @@
 
 .graveyard {
   grid-area: graveyard;
+  padding-left: 0;
+  border: 2px solid orange;
+  text-align: center;
+  list-style: none;
+}
+
+.graveyard-card{
 }
 
 .sidebar-list-item {
