--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -102,7 +102,29 @@
       height: 85vh;
       margin: 2vh;
       border-radius: 5px;
-      padding: 2px;
+      padding: 1%;
+      input {
+        width: 98%;
+        border: 0px;
+        border-bottom: 1px solid lightgrey;
+        padding: 0 1%;
+        &:focus {
+          outline: none;
+          background-color: beige;
+        }
+      }
+      #mana-icon-container {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        img {
+          width: 30px;
+          height: 30px;
+          padding: 0 5px;
+          opacity: 0.5;
+        }
+      }
     }
     article {
       border: 2px dotted black;
