created cards route to see all known cards

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -135,3 +135,11 @@
 .transparant-icon {
   opacity: 0.5;
 }
+
+#cards-container {
+	display: flex;
+	flex-wrap: wrap;
+	img {
+		padding: 4px;
+	}
+}
