--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -96,13 +96,14 @@
 #new-library-container {
     display: grid;
     grid-template-columns: 19.5% 79.5%;
-    grid-column-gap: 1%;
+    grid-column-gap: 0.5%;
     aside {
       border: 2px solid black;
       height: 85vh;
       margin: 2vh;
       border-radius: 5px;
       padding: 1%;
+			font-size: 14px;
       input {
         width: 98%;
         border: 0px;
